--- a/introduce/src/scss/App.scss
+++ b/introduce/src/scss/App.scss
@@ -23,3 +23,11 @@
         }
         
 }
+.d1ul{
+    li{
+        margin-top: 1.5vw;
+        a{
+            font-size: 1.5rem;
+        }
+    }
+}
