--- a/introduce/src/scss/App.css
+++ b/introduce/src/scss/App.css
@@ -1,12 +1,38 @@
-:root { --logoment-margin-top: 1vw
-; }
+:root {
+  --logoment-margin-top: 1vw
+;
+}
 
-.hd { max-width: 1280px; margin: 0 auto; }
+.hd {
+  max-width: 1280px;
+  margin: 0 auto;
+}
 
-.hd .logoh { width: 100%; }
+.hd .logoh {
+  width: 100%;
+}
 
-.hd .logoh a img { vertical-align: top; }
+.hd .logoh a img {
+  vertical-align: top;
+}
 
-.hd .logoh a .logoment { width: 6.5vw; margin-top: calc(var(--logoment-margin-top)); display: block; margin-left: 1.2vw; }
+.hd .logoh a .logoment {
+  width: 6.5vw;
+  margin-top: calc(var(--logoment-margin-top));
+  display: block;
+  margin-left: 1.2vw;
+}
 
-.hd .logoh a .logoname { margin-top: calc(var(--logoment-margin-top) - 0.7vw); width: 8vw; display: block; }
+.hd .logoh a .logoname {
+  margin-top: calc(var(--logoment-margin-top) - 0.7vw);
+  width: 8vw;
+  display: block;
+}
+
+.d1ul li {
+  margin-top: 1.5vw;
+}
+
+.d1ul li a {
+  font-size: 1.5rem;
+}
