--- a/introduce/src/scss/App.scss
+++ b/introduce/src/scss/App.scss
@@ -5,7 +5,7 @@
     max-width : 1280px;
     margin: 0 auto;
     .logoh{
-        width:100%;
+        
         a{
             img{vertical-align: top;}
             .logoment{
@@ -13,6 +13,7 @@
                 margin-top: calc(var(--logoment-margin-top));
                 display: block;
                 margin-left: 1.2vw;
+
             }
             .logoname{
                 margin-top: calc(var(--logoment-margin-top) - 0.7vw);
@@ -23,11 +24,38 @@
         }
         
 }
+@media(max-width: 1280px){
+    .logoh{
+        margin-left: 3vw;
+    }
+}
+@media(max-width: 500px){
+    .logoment{
+        min-width: 8vw;
+    }
+    .logoname{
+        min-width: 10vw;
+    }
+}
 .d1ul{
     li{
         margin-top: 1.5vw;
         a{
-            font-size: 1.5rem;
+            font-size: 1.2vw;
         }
     }
+}
+.utilButton{
+    font-size: 0.8vw;
+}
+#utilMenu{
+    margin-top : 1.4vw;
+    margin-left: 2vw;
+    button{
+        border: none;
+        font-family: "nuriGothicR";
+    }
+}
+#navi{
+    border-bottom: 2px solid #222;
 }
