--- a/introduce/src/scss/App.css
+++ b/introduce/src/scss/App.css
@@ -28,10 +28,20 @@
 
 #utilMenu button { border: none; font-family: "nuriGothicR"; }
 
-.snsdiv { font-size: 1rem; }
+.snsdiv { font-size: 1rem; -webkit-animation-duration: 1s; animation-duration: 1s; -webkit-animation-name: snsslide; animation-name: snsslide; }
 
 @media (min-width: 768px) { .snsdiv { font-size: 1.3rem; } }
 
 @media (min-width: 1400px) { .snsdiv { font-size: 1.7rem; } }
+
+@-webkit-keyframes snsslide { from { height: 0;
+    overflow: hidden; }
+  50% { overflow: hidden; }
+  to { height: 5.1rem; } }
+
+@keyframes snsslide { from { height: 0;
+    overflow: hidden; }
+  50% { overflow: hidden; }
+  to { height: 5.1rem; } }
 
 #navi { border-bottom: 2px solid #222; position: fixed; left: 0; top: 0; right: 0; }
